# pixlet

./: .gitignore  CMakeLists.txt  README.md
include/: color.h  editor.h  layers.h  selector.h
src/: editor.c  layers.c  main.c  selector.c
